# parallel-minecraft-downloader

./: Cargo.toml  README.md  build.sbt
.github/workflows/: rust.yml
src/: args.rs  console_message.rs  hash.rs  main.rs  model.rs
src/main/scala/ga/kisaragi/parallelminecraftdownloader/: Main.scala
