[package]
name = "parallel-minecraft-downloader"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.6"
clap = { version = "4.4.11", features = ["derive"] }
md5 = "0.7.0"
rayon = "1.9.0"
reqwest = { version = "0.11.23", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["std", "serde"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
url = { version = "2.5.0", features = ["serde"] }
