[package]
name = "parallel-minecraft-downloader"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
md5 = "0.7.0"
rayon = "1.10.0"
reqwest = { version = "0.13.0", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["std", "serde"] }
url = { version = "2.5.0", features = ["serde"] }
